--- a/hays2.css
+++ b/hays2.css
@@ -19,7 +19,7 @@ body{
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../hays/images/bg2.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(images/bg2.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
